Fix Scrollbar Appearing When Not Needed

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -52,17 +52,18 @@ svg {
 .content-display {
     position: relative;
     overflow-x: hidden;
+    overflow-y: hidden;
     left: 64px;
     width: calc(100% - 64px);
-    height: 100%;
+    height: 100vh;
     z-index: 1;
 }
 
 .tab-content {
     display: none;
     flex-direction: column;
-    overflow-y: scroll;
-    height: 100vh;
+    overflow-y: auto;
+    height: 100%;
 }
 
     .tab-content.active {
